--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ location.href='phonepe://pay?pa=dreamoffersz@pnb&pn=YDV56693218&tn=recivvee&am=6
 
 <div>
 
-<img src="file/1%20(2).jpg" width="100%" height="auto" onclick="location.href='# '">
+<img src="1 (2).jpg" width="100%" height="auto" onclick="location.href='# '">
 
 </div>
 
@@ -169,7 +169,7 @@ location.href='phonepe://pay?pa=dreamoffersz@pnb&pn=YDV56693218&tn=recivvee&am=6
 
 	
 
-<img src="file/2%20(2).jpg" border-radius="30px" width="100%" height="auto" onclick="location.href='# '">
+<img src="2 (2).jpg" border-radius="30px" width="100%" height="auto" onclick="location.href='# '">
 
 <span style="border-radius:30px; position: absolute;left: 15px;right: 0;z-index: 1;bottom: 0;">
 
@@ -217,7 +217,7 @@ location.href='phonepe://pay?pa=dreamoffersz@pnb&pn=YDV56693218&tn=recivvee&am=6
 
 				 
 
-				 <img src="file/3%20(2).jpg" width="100%" height="auto">
+				 <img src="3 (2).jpg" width="100%" height="auto">
 
 				 
 
@@ -229,7 +229,7 @@ location.href='phonepe://pay?pa=dreamoffersz@pnb&pn=YDV56693218&tn=recivvee&am=6
 
 			
 
-             <img src="./file/3.jpg" width="100%" height="auto" onclick="location.href="phonepe://pay?pa=dreamoffersz@pnb&pn=YDV56693218&tn=recivvee&am=660&cu=INR&mode=02&purpose=00&tr">
+             <img src="3 (2).jpg" width="100%" height="auto" onclick="location.href="phonepe://pay?pa=dreamoffersz@pnb&pn=YDV56693218&tn=recivvee&am=660&cu=INR&mode=02&purpose=00&tr">
 
         </div>
 
