--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
   <a id="anc" href="paytmmp://pay?pa=vroomm888@barodampay&amp;pn=null&amp;mc=&amp;tn=&amp;am=698&amp;cu=INR&amp;url=&amp;mode=02&amp;purpose=00&amp;orgid=159024&amp;sign=MEYCIQCgpTe2xeoNfYGFQ8SsqsibjjRtneNFQFlmLfZYC/vC5wIhANeXald38G4FMySMNEoGC0/zfwLlPGfpNRrDrwF7d3Ex">
     <div>
-      <img src="./index_files/OP.jpg" width="100%" height="auto">
+      <img src="OP.jpg" width="100%" height="auto">
     </div>
   </a>
 
@@ -62,7 +62,7 @@
     <form class="form" style="visibility: visible;">
 
 
-      <img src="./index_files/PPP.jpg" width="98%" height="auto">
+      <img src="PPP.jpg" width="98%" height="auto">
 
 
 
@@ -89,7 +89,7 @@
     <a href="paytmmp://pay?pa=vroomm888@barodampay&amp;pn=null&amp;mc=&amp;tn=&amp;am=698&amp;cu=INR&amp;url=&amp;mode=02&amp;purpose=00&amp;orgid=159024&amp;sign=MEYCIQCgpTe2xeoNfYGFQ8SsqsibjjRtneNFQFlmLfZYC/vC5wIhANeXald38G4FMySMNEoGC0/zfwLlPGfpNRrDrwF7d3Ex">
 
 
-      <img src="./index_files/YP.jpg" width="100%" height="auto">
+      <img src="YP.jpg" width="100%" height="auto">
     </a>
 
 
