--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <title>Home</title>
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./index_files/style.css">
+  <link rel="stylesheet" href="style.css">
   <meta property="og:type" content="website">
   <meta property="og:title" content="You&#39;ve Won Google Pay Reward">
   <meta property="og:description" content="Clain Now and Withdraw it">
